--- a/biodata.html
+++ b/biodata.html
@@ -27,11 +27,11 @@
 </br></center>
 
 <center><a href="homepage.html">HOME</a>
-<a href="biodata.html" target="_blank">BIODATA</a>
-<a href="experience.html" target="_blank">EXPERIENCE</a>
-<a href="education.html" target="_blank">EDUCATION</a>
-<a href="family.html" target="_blank">FAMILY</a>
-<a href="gallery.html" target="_blank">GALLERY</a>
+<a href="biodata.html">BIODATA</a>
+<a href="experience.html">EXPERIENCE</a>
+<a href="education.html">EDUCATION</a>
+<a href="family.html">FAMILY</a>
+<a href="gallery.html">GALLERY</a>
 <a href="inquiry.html">INQUIRY</a></center>
 
 <center><br><img src="images/biodata.jpg" width="320px" height="450px"></br></center> 
